fixed some white space on mobile

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -37,6 +37,9 @@ background-color:rgba(0, 0, 0, 0.4);
  text-align: center;
  margin-top: 20px;
 }
+.create-btn{
+  white-space: normal;
+}
 .account-form{
   background-color:rgba(0, 0, 0, 0.75);
 }
